# qds

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml  brightkite-2016-07-29-19-14-03.csv  brightkite-2016-07-29-19-45-58.csv  brightkite-2016-08-06-16-57-25.csv  brightkite-2016-08-08-19-31-43.csv  brightkite-2016-08-30-10-46-04.csv  main.cpp  nds.bat  nds.cpp  nds.psess  nds.sln  nds.vcxproj  nds.vcxproj.filters  nds160806(1).vspx  nds160806.vspx  stdafx.h
benchmarks/: CMakeLists.txt  bench_info.cpp  bench_info.sh  bench_pdigest_buffer.sh  bench_queries  bench_queries.cpp  bench_queries.sh  bench_queries_db.Rmd  bench_queries_db.cpp  bench_queries_db.sh  bench_queries_db_template.txt  bench_raw.sh  bench_synthetic.sh  g5k_get_info.sh  info.org  info_checkins.sh  info_on_time_performance.sh  info_tripdata.sh  info_tripdata_small.sh  info_twitter-small.sh  info_twitter.sh  log_20180709-154148.tgz  log_20180709-154958.tgz  log_20180709-155809.tgz  log_20180709-161819.tgz  log_20180709-163559.tgz  log_20180709-165329.tgz  log_20180709-173243.tgz  log_20180709-173345.tgz  log_20180709-173447.tgz  log_20180709-173605.tgz  log_20180709-173720.tgz  log_20180709-184203.tgz  log_20180709-194520.tgz  log_20180709-200502.tgz  log_20180709-202240.tgz  log_20180709-204000.tgz  log_20180710-110517.tgz  log_20180710-121307.tgz  log_20180710-132313.tgz  (+61 more)
benchmarks/analysis/log_20180708-164037/: analysis.Rmd  analysis.nb.html  disabled_20180708-164037_nc_gowalla-count.csv  disabled_20180708-164037_nc_twitter-small-count.csv
benchmarks/analysis/log_20180709-111833/: .Rhistory  analysis.Rmd  analysis.nb.html  db_20181207-144925_brightkite-count-region.csv  disabled_20180709-111833_nc_twitter-small-count.csv  pdigest_20180709-111833_nc_on_time_performance-quantile-0_001.csv  pdigest_20180709-111833_nc_on_time_performance-quantile-0_010.csv  pdigest_20180709-111833_nc_on_time_performance-quantile-0_100.csv  pdigest_20180709-111833_nc_on_time_performance-quantile-0_500.csv  pdigest_20180709-111833_nc_on_time_performance-quantile-0_900.csv  pdigest_20180709-111833_nc_on_time_performance-quantile-0_990.csv  pdigest_20180709-111833_nc_on_time_performance-quantile-0_999.csv
benchmarks/analysis/log_20180709-204000/: brightkite_20180709-173243_-1_22_-1_-1_1_MEMORY.json  brightkite_20180709-173243_-1_22_-1_-1_1_SHARING_MEMORY.json  brightkite_20180709-173345_-1_22_-1_-1_32_SHARING_MEMORY.json  gowalla_20180709-173447_-1_22_-1_-1_1_MEMORY.json  gowalla_20180709-173447_-1_22_-1_-1_1_SHARING_MEMORY.json  on_time_performance_20180709-173720_-1_15_2008_-1_1_MEMORY.json  on_time_performance_20180709-173720_-1_15_2008_-1_1_SHARING_MEMORY.json  on_time_performance_20180709-173720_0_15_2008_0_1_PDIGEST_PAYLOAD.json  on_time_performance_20180709-173720_0_15_2008_1_1_PDIGEST_PAYLOAD.json  on_time_performance_20180709-173720_100_15_2008_0_1_PDIGEST_PAYLOAD.json  on_time_performance_20180709-173720_100_15_2008_1_1_PDIGEST_PAYLOAD.json  on_time_performance_20180709-173720_25_15_2008_0_1_PDIGEST_PAYLOAD.json  on_time_performance_20180709-173720_25_15_2008_1_1_PDIGEST_PAYLOAD.json  on_time_performance_20180709-173720_50_15_2008_0_1_PDIGEST_PAYLOAD.json  on_time_performance_20180709-173720_50_15_2008_1_1_PDIGEST_PAYLOAD.json  on_time_performance_20180709-184203_-1_15_2008_-1_32_MEMORY.json  on_time_performance_20180709-184203_-1_15_2008_-1_32_SHARING_MEMORY.json  on_time_performance_20180709-184203_0_15_2008_0_32_PDIGEST_PAYLOAD.json  on_time_performance_20180709-184203_0_15_2008_1_32_PDIGEST_PAYLOAD.json  on_time_performance_20180709-184203_100_15_2008_0_32_PDIGEST_PAYLOAD.json  on_time_performance_20180709-184203_100_15_2008_1_32_PDIGEST_PAYLOAD.json  on_time_performance_20180709-184203_25_15_2008_0_32_PDIGEST_PAYLOAD.json  on_time_performance_20180709-184203_25_15_2008_1_32_PDIGEST_PAYLOAD.json  on_time_performance_20180709-184203_50_15_2008_0_32_PDIGEST_PAYLOAD.json  on_time_performance_20180709-184203_50_15_2008_1_32_PDIGEST_PAYLOAD.json  twitter_20180709-194520_-1_22_-1_-1_1_MEMORY.json  twitter_20180709-194520_-1_22_-1_-1_1_SHARING_MEMORY.json  twitter_20180709-200502_-1_22_-1_-1_64_MEMORY.json  twitter_20180709-200502_-1_22_-1_-1_64_SHARING_MEMORY.json  twitter_20180709-202240_-1_22_-1_-1_1_MEMORY.json  twitter_20180709-202240_-1_22_-1_-1_1_SHARING_MEMORY.json  twitter_20180709-204000_-1_22_-1_-1_64_MEMORY.json  twitter_20180709-204000_-1_22_-1_-1_64_SHARING_MEMORY.json
benchmarks/analysis/log_20180712-121453/: .Rhistory  analysis.Rmd  analysis.nb.html  pdigest_20180712-121453_100_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_10_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_11_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_12_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_13_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_14_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_15_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_16_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_17_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_18_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_19_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_1_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_20_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_21_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_22_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_23_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_24_nc_on_time_performance-quantile-0_500-tile.csv  pdigest_20180712-121453_25_nc_on_time_performance-quantile-0_500-tile.csv  (+182 more)
benchmarks/analysis/log_20180716-185506/: .Rhistory  analysis.Rmd  (+3 more)
benchmarks/build-release/: config.h  nds  nds_CXX_cotire.cmake  nds_C_cotire.cmake  profile
benchmarks/old_log/: log_20180709-204000.tar.xz
(+417 files in other folders)
